# techfusion-ai

./: .gitignore  Dockerfile.web  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
apps/agent/: Cargo.toml  Dockerfile
apps/agent/src/: agent.rs  client.rs  collector.rs  config.rs  inventory.rs  main.rs  network_discovery.rs  registration.rs  remote.rs  security.rs
apps/api-gateway/: .env.example  Dockerfile  jest.config.js  package.json  tsconfig.json
apps/api-gateway/prisma/: embed.sql  schema.prisma  seed.ts
apps/api-gateway/scripts/: seed-load-test.mjs
apps/api-gateway/src/: app.module.ts  demo.controller.ts  health.controller.ts  main.ts  metrics.controller.ts  metrics.interceptor.ts  telemetry.ts
apps/api-gateway/test/: app.integration.spec.ts  enterprise.integration.spec.ts  full-e2e-scenario.spec.ts  setup.ts
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js
apps/worker/: Dockerfile  package.json  tsconfig.json
docs/: 01-Master-Specification.md  02-OpenCode-Build-Prompts.md  AUDIT_REPORT.md  PRD.md  PROJECT_CONTEXT.md  launch-checklist.md
infra/docker/: docker-compose.yml
infra/k8s/: Chart.yaml  README.md  values-production.yaml  values-staging.yaml  values.yaml
test/chaos/: chaos-results-20260618_141125.md  run-chaos.sh
test/e2e/: full-scenario.spec.ts
test/load/: README.md  ai-chat.js  mixed-workload.js  remote-support.js  reports.js  telemetry.js
test/security/: run-security-review.sh  security-review-20260618_141126.md
(+183 files in other folders)
