[package]
name = "agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
